--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: #b6895b;
+  --primary: #4CAF50;
   --bg: #010101;
 }
 
@@ -376,6 +376,63 @@ footer .credit a {
   .contact .row form {
     padding-top: 0;
   }
+}
+
+/* login form */
+.form-container {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  padding-bottom: 70px;
+}
+
+.form-container form {
+  width: 500px;
+  border-radius: 5px;
+  border: 2px solid #fff;
+  padding: 20px;
+  text-align: center;
+  background-color: #222;
+  color: #fff;
+}
+
+.form-container form h3 {
+  font-size: 30px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  color: var(--primary);
+}
+
+.form-container form .box {
+  width: 100%;
+  border-radius: 5px;
+  border: 2px solid #fff;
+  padding: 12px 14px;
+  font-size: 18px;
+  margin: 10px 0;
+  background: none;
+  color: #fff;
+}
+
+.form-container form .btn {
+  background-color: var(--primary);
+  color: #fff;
+  padding: 12px 20px;
+  font-size: 18px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.form-container form p {
+  margin-top: 20px;
+  font-size: 20px;
+  color: #fff;
+}
+
+.form-container form p a {
+  color: var(--primary);
 }
 
 /* hp */
